fixing photo spacing

--- a/src/styles/Instructors.css
+++ b/src/styles/Instructors.css
@@ -32,3 +32,11 @@
     max-height: 300px;
     margin: 8px 0 20px 0;
 }
+
+#joelPicture2 {
+    margin-top: 15px;
+}
+
+#joelPicture3 {
+    margin-top: 15px;
+}
